--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
+    "axios": "^0.21.1",
     "bufferutil": "^4.0.1",
     "discord.js": "^12.2.0",
     "enmap": "^5.8.2",
