--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sodium": "^3.0.2",
     "soundcloud-downloader": "^0.2.2",
     "utf-8-validate": "^5.0.2",
+    "youtube-sr": "^2.0.5",
     "ytdl-core": "^3.4.2",
     "zlib-sync": "^0.1.7"
   }
