--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grandpajeff",
-  "version": "0.5.3",
+  "version": "0.7.0",
   "description": "Discord bot that is still in development, type ``%help`` to find out about my current list of commands",
   "main": "main.js",
   "scripts": {
@@ -9,21 +9,26 @@
   "author": "Gelu;#8177",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.3.3",
+    "@mtblc/image-collage": "github:mtblc/image-collage#master",
     "axios": "^0.21.1",
     "bufferutil": "^4.0.1",
-    "discord.js": "^12.2.0",
+    "discord.js": "^12.5.1",
     "enmap": "^5.8.2",
     "erlpack": "^0.1.3",
-    "ffmpeg": "0.0.4",
+    "fetch": "^1.1.0",
     "ffmpeg-static": "^4.2.7",
+    "http": "^0.0.1-security",
     "jaro-winkler": "^0.2.8",
-    "mongoose": "^5.9.25",
+    "mongoose": "^5.11.10",
+    "node-fetch": "^2.6.1",
     "simple-youtube-api": "^5.2.1",
-    "sodium": "^3.0.2",
     "soundcloud-downloader": "^0.2.2",
+    "twemoji-parser": "^13.0.0",
     "utf-8-validate": "^5.0.2",
+    "yarn": "^1.22.10",
+    "youtube-search": "^1.1.2",
     "youtube-sr": "^2.0.5",
+    "ytdl": "^1.4.1",
     "ytdl-core": "^3.4.2",
     "zlib-sync": "^0.1.7"
   }
